<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
        <com.geekband.huzhouapp.custom.PagingLoadListView
        	android:id="@+id/lv_othersquestion_questionList"
        	android:divider="#F0F0F0"
        	android:dividerHeight="5dp"
        	android:background="#F0F0F0"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent" />
        
        <LinearLayout
            android:id="@+id/vg_othersquestion_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible" >

            <ProgressBar
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_loading"
                android:textColor="#BEBEBE" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/vg_othersquestion_errorTip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="visible" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_error"
                android:textColor="#BEBEBE" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vg_othersquestion_emptyTip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="visible" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_empty"
                android:textColor="#BEBEBE" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <com.geekband.huzhouapp.custom.RefreshButton
                android:id="@+id/vg_othersquestion_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/bg_btn_3" />
        </RelativeLayout>
    </FrameLayout>
    
    
</LinearLayout>
